[gd_scene load_steps=26 format=3 uid="uid://cq80cowp5bqci"]

[ext_resource type="Texture2D" uid="uid://b1duui5i5ivjp" path="res://bg/bg1.jpg" id="1_aagla"]
[ext_resource type="Script" path="res://menu.gd" id="1_oye5h"]
[ext_resource type="FontFile" uid="uid://cos2p43qul2sb" path="res://placeholders/MysteryQuest-Regular.ttf" id="2_51d8n"]
[ext_resource type="Resource" uid="uid://dya4xb2kba7lg" path="res://dialogues/all_in_one.dialogue" id="2_labpj"]
[ext_resource type="AudioStream" uid="uid://dt7iyimuhg6ha" path="res://placeholders/relaxing-piano-music-248868.mp3" id="3_1kri6"]
[ext_resource type="Texture2D" uid="uid://di23veme3cgn" path="res://placeholders/voice.png" id="4_nbra7"]
[ext_resource type="Texture2D" uid="uid://j54gvl31lt0i" path="res://scenes/S1_img1.png" id="4_ydxk6"]
[ext_resource type="Texture2D" uid="uid://5f6igqgeitmv" path="res://scenes/S2_img1.png" id="5_d7n20"]
[ext_resource type="Script" path="res://comms.gd" id="6_q063w"]
[ext_resource type="Script" path="res://http_request.gd" id="7_5061n"]
[ext_resource type="PackedScene" uid="uid://0ooewap8yaqs" path="res://viseme.tscn" id="10_4yuwd"]
[ext_resource type="AudioStream" uid="uid://urt6u0vhrjau" path="res://placeholders/en-US-JasonNeural_friendly_long.wav" id="12_go328"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_q3wwy"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_aecnv"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_o3lq0"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_uvy00"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_073af"]

[sub_resource type="Animation" id="Animation_rab7s"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Label:visible_ratio")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.505]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Bg1:self_modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("MicButton:self_modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("MicButton:position")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(-25, 439)]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("MicContainer:modulate")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("MicContainer:position")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(-515.435, 187)]
}
tracks/6/type = "value"
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/path = NodePath("AIcontainer:position")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(150, 182)]
}
tracks/7/type = "value"
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/path = NodePath("AIcontainer:modulate")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}
tracks/8/type = "value"
tracks/8/imported = false
tracks/8/enabled = true
tracks/8/path = NodePath("Begin:self_modulate")
tracks/8/interp = 1
tracks/8/loop_wrap = true
tracks/8/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}
tracks/9/type = "value"
tracks/9/imported = false
tracks/9/enabled = true
tracks/9/path = NodePath("AudioStreamPlayer2D:volume_db")
tracks/9/interp = 1
tracks/9/loop_wrap = true
tracks/9/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}
tracks/10/type = "value"
tracks/10/imported = false
tracks/10/enabled = true
tracks/10/path = NodePath("Label:position")
tracks/10/interp = 1
tracks/10/loop_wrap = true
tracks/10/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(-293, 102)]
}
tracks/11/type = "value"
tracks/11/imported = false
tracks/11/enabled = true
tracks/11/path = NodePath("Begin:position")
tracks/11/interp = 1
tracks/11/loop_wrap = true
tracks/11/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(-80, 327)]
}
tracks/12/type = "value"
tracks/12/imported = false
tracks/12/enabled = true
tracks/12/path = NodePath("S1Img1:modulate")
tracks/12/interp = 1
tracks/12/loop_wrap = true
tracks/12/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 0)]
}
tracks/13/type = "value"
tracks/13/imported = false
tracks/13/enabled = true
tracks/13/path = NodePath("Bg1:texture")
tracks/13/interp = 1
tracks/13/loop_wrap = true
tracks/13/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("1_aagla")]
}
tracks/14/type = "value"
tracks/14/imported = false
tracks/14/enabled = true
tracks/14/path = NodePath("Bg1:modulate")
tracks/14/interp = 1
tracks/14/loop_wrap = true
tracks/14/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 0)]
}
tracks/15/type = "value"
tracks/15/imported = false
tracks/15/enabled = true
tracks/15/path = NodePath("Viseme:position")
tracks/15/interp = 1
tracks/15/loop_wrap = true
tracks/15/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(106, 732)]
}
tracks/16/type = "value"
tracks/16/imported = false
tracks/16/enabled = true
tracks/16/path = NodePath("Begin:modulate")
tracks/16/interp = 1
tracks/16/loop_wrap = true
tracks/16/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_uci31"]
resource_name = "micTest"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("MicButton:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5, 1),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector2(-25, 439), Vector2(-25, 249.67), Vector2(-25, 78.47)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("MicContainer:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.5, 1),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1), Color(1, 1, 1, 1)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("MicContainer:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.5, 1),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector2(-515.435, 187), Vector2(-445.775, 187), Vector2(-369.47, 187)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("AIcontainer:position")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 0.5, 1),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector2(390.4, 182), Vector2(282.015, 182), Vector2(159.105, 182)]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("AIcontainer:modulate")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0, 0.5, 1),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 0.52549), Color(1, 1, 1, 1)]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("Viseme:position")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0, 0.3, 0.5, 0.8, 1),
"transitions": PackedFloat32Array(0.307786, 0.297302, 1, 0.594604, 0.517632),
"update": 0,
"values": [Vector2(48.005, 732), Vector2(48, 244), Vector2(48, 373.886), Vector2(48, 336), Vector2(48, 333.97)]
}

[sub_resource type="Animation" id="Animation_k0vlq"]
resource_name = "s2"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Bg1:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("5_d7n20")]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Bg1:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.9),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_nc5e7"]
resource_name = "title"
length = 3.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Label:visible_ratio")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0.2, 0.7, 1.4),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [0.0, 0.505, 1.0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Bg1:self_modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.7, 1.36667),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 0.407843), Color(1, 1, 1, 1)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("MicButton:self_modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(1.5, 2.2, 2.86667),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 0.560784), Color(1, 1, 1, 1)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Begin:self_modulate")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(1.5, 2.16667, 2.86667),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 0.529412), Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_4fwa3"]
resource_name = "title2scene1"
length = 3.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Bg1:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0.0666667, 0.5, 1.26667),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 0.529412), Color(1, 1, 1, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("AudioStreamPlayer2D:volume_db")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.5, 1.2),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [0.0, -11.45, -32.016]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Label:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.233333, 0.533333),
"transitions": PackedFloat32Array(0.34151, 1.51572, 1),
"update": 0,
"values": [Vector2(-293, 102), Vector2(-293, 140.292), Vector2(-293, -73.125)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Begin:position")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 0.233333, 0.5),
"transitions": PackedFloat32Array(0.450625, 1.51572, 1),
"update": 0,
"values": [Vector2(-80, 327), Vector2(-117.795, 327), Vector2(410.495, 327)]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("S1Img1:modulate")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(1.46667, 2.76667, 3.43333),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 0.529412), Color(1, 1, 1, 1)]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("Begin:modulate")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0.1, 1.03333),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_cgmq6"]
_data = {
"RESET": SubResource("Animation_rab7s"),
"micTest": SubResource("Animation_uci31"),
"s2": SubResource("Animation_k0vlq"),
"title": SubResource("Animation_nc5e7"),
"title2scene1": SubResource("Animation_4fwa3")
}

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_f4sah"]

[sub_resource type="AudioStreamMicrophone" id="AudioStreamMicrophone_kwuss"]

[node name="menu" type="Control"]
layout_mode = 3
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
grow_horizontal = 2
script = ExtResource("1_oye5h")
dialogue_res = ExtResource("2_labpj")

[node name="Bg1" type="Sprite2D" parent="."]
modulate = Color(1, 1, 1, 0)
position = Vector2(-0.499997, 300)
scale = Vector2(1.08832, 0.815218)
texture = ExtResource("1_aagla")
region_rect = Rect2(0.0100751, -0.0857446, 735.667, 736.705)

[node name="S1Img1" type="Sprite2D" parent="."]
modulate = Color(1, 1, 1, 0)
position = Vector2(0, 300)
scale = Vector2(0.446138, 0.586484)
texture = ExtResource("4_ydxk6")
region_enabled = true
region_rect = Rect2(0, 0, 1792.12, 1023.89)

[node name="Viseme" parent="." instance=ExtResource("10_4yuwd")]
z_index = 3
position = Vector2(106, 732)
scale = Vector2(0.31, 0.31)

[node name="Begin" type="Button" parent="."]
unique_name_in_owner = true
layout_mode = 0
offset_left = -80.0
offset_top = 327.0
offset_right = 77.0
offset_bottom = 393.0
theme_override_fonts/font = ExtResource("2_51d8n")
theme_override_font_sizes/font_size = 42
theme_override_styles/focus = SubResource("StyleBoxEmpty_q3wwy")
theme_override_styles/hover_pressed_mirrored = SubResource("StyleBoxEmpty_aecnv")
theme_override_styles/hover_pressed = SubResource("StyleBoxEmpty_o3lq0")
theme_override_styles/hover = SubResource("StyleBoxEmpty_uvy00")
theme_override_styles/pressed = SubResource("StyleBoxEmpty_073af")
action_mode = 0
text = "Begin"
flat = true

[node name="Label" type="Label" parent="."]
self_modulate = Color(1, 1, 1, 0.968627)
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -293.0
offset_top = 102.0
offset_right = 304.0
offset_bottom = 173.0
grow_horizontal = 2
pivot_offset = Vector2(298, 0)
size_flags_horizontal = 6
size_flags_vertical = 6
theme_override_fonts/font = ExtResource("2_51d8n")
theme_override_font_sizes/font_size = 51
text = "The Little Big Thinkers Club"
visible_characters = 14
visible_ratio = 0.505

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_cgmq6")
}

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("3_1kri6")
area_mask = 0
parameters/looping = true

[node name="MicContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_left = -515.435
offset_top = 187.0
offset_right = -296.435
offset_bottom = 420.0
grow_vertical = 2
script = ExtResource("6_q063w")

[node name="Record" type="Button" parent="MicContainer"]
unique_name_in_owner = true
layout_mode = 2
action_mode = 0
text = "Push to Talk"

[node name="VolumeBar" type="ProgressBar" parent="MicContainer"]
layout_mode = 2
max_value = 1.0

[node name="GameState" type="Label" parent="MicContainer"]
visible = false
layout_mode = 2
text = "None"

[node name="State" type="Label" parent="MicContainer"]
unique_name_in_owner = true
visible = false
layout_mode = 2
text = "idle"

[node name="STTresponse" type="RichTextLabel" parent="MicContainer"]
unique_name_in_owner = true
visible = false
layout_mode = 2
text = "nothing"
fit_content = true

[node name="MicButton" type="Button" parent="."]
visible = false
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -25.0
offset_top = 439.0
offset_right = 495.0
offset_bottom = 959.0
grow_horizontal = 2
grow_vertical = 0
scale = Vector2(0.11, 0.11)
theme_override_styles/focus = SubResource("StyleBoxEmpty_f4sah")
action_mode = 0
icon = ExtResource("4_nbra7")
flat = true

[node name="MicInput" type="AudioStreamPlayer2D" parent="."]
stream = SubResource("AudioStreamMicrophone_kwuss")
volume_db = 4.952
autoplay = true
bus = &"Record"
area_mask = 0

[node name="micOutput" type="AudioStreamPlayer2D" parent="."]

[node name="HTTPRequest" type="HTTPRequest" parent="."]
unique_name_in_owner = true
use_threads = true
script = ExtResource("7_5061n")

[node name="AIcontainer" type="VBoxContainer" parent="."]
layout_mode = 0
offset_left = 150.0
offset_top = 182.0
offset_right = 370.0
offset_bottom = 439.0

[node name="AIstate" type="Label" parent="AIcontainer"]
unique_name_in_owner = true
visible = false
layout_mode = 2
size_flags_horizontal = 4
text = "idle"

[node name="emotion" type="Label" parent="AIcontainer"]
unique_name_in_owner = true
visible = false
layout_mode = 2
size_flags_horizontal = 4

[node name="AIResponse" type="RichTextLabel" parent="AIcontainer"]
unique_name_in_owner = true
visible = false
custom_minimum_size = Vector2(0, 185.18)
layout_direction = 1
layout_mode = 2
text = "waiting..."

[node name="PauseBtn" type="Button" parent="."]
visible = false
layout_mode = 1
offset_left = -388.0
offset_top = 15.0
offset_right = -333.0
offset_bottom = 46.0
text = "Pause"

[node name="Narrator" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("12_go328")

[connection signal="pressed" from="Begin" to="." method="_on_begin_pressed"]
[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_animplayer_animation_finished"]
[connection signal="convo_ended" from="MicContainer" to="." method="_on_convo_ended"]
[connection signal="button_up" from="MicContainer/Record" to="MicContainer" method="_on_record_button_up"]
[connection signal="pressed" from="MicContainer/Record" to="MicContainer" method="_on_record_pressed"]
[connection signal="pressed" from="MicButton" to="." method="_on_mic_button_pressed"]
[connection signal="pressed" from="PauseBtn" to="." method="_on_pause_btn_pressed"]
